--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.cdnfonts.com/css/glacial-indifference-2" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;600&display=swap" rel="stylesheet">
+  <script src="https://checkout.culqi.com/js/v4"></script>
+
 
 
 </head>
